fix issues: replaced this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' in some classes